# t1ha

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  LICENSE  Makefile  README.md  circle.yml  meson.build  t1ha-dll.vcxproj  t1ha-static.vcxproj  t1ha-test.vcxproj  t1ha.c  t1ha.cc  t1ha.files  t1ha.h  t1ha.sln  t1ha0.c  t1ha1.c  t1ha_bits.h  test.c
.circleci/: config.yml
.github/workflows/: ci.yml
src/: t1ha0.c  t1ha0_ia32aes.h  t1ha0_ia32aes_a.h  t1ha0_ia32aes_avx.c  t1ha0_ia32aes_b.h  t1ha0_ia32aes_noavx.c  t1ha0_selfcheck.c  t1ha1.c  t1ha1_selfcheck.c  t1ha2.c  t1ha2_selfcheck.c  t1ha_bits.h  t1ha_selfcheck.c  t1ha_selfcheck.h  t1ha_selfcheck_all.c
tests/: 4bench_t1ha0_ia32aes_avx.c  4bench_t1ha0_ia32aes_avx2.c  4bench_t1ha0_ia32aes_noavx.c  bench.c  bench.h  common.h  main.c  mera.c  mera.h  test.c
tests/highwayhash/: 4bench_avx2.cc  4bench_portable.cc  4bench_sse41.cc  4bench_vsx.cc  arch_specific.cc  arch_specific.h  compiler_specific.h  endianess.h  hh_avx2.h  hh_buffer.h  hh_portable.h  hh_sse41.h  hh_types.h  hh_vsx.h  highwayhash.h  highwayhash_target.cc  highwayhash_target.h  iaca.h  load3.h  pure_c.c  pure_c.h  vector128.h  vector256.h  verifier.c
tests/meowhash/: meow1_thunk.c  meow_hash.h  meow_intrinsics.h
tests/stadtx/: stadtx_hash.h  stadtx_thunk.c
tests/wyhash/: wyhash.h  wyhash_thunk.c
tests/xxhash/: xxh3.h  xxh_thunk.c  xxhash.c  xxhash.h
